--- a/App-Manifest.yml
+++ b/App-Manifest.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-HelloWorld-svc
+  name: my-helloWorld-svc
   labels:
     app: HelloWorld
 spec:
